--- a/weather.css
+++ b/weather.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: black;
+    background: url("weather.jpg");
     font-family:Arial, Helvetica, sans-serif;
 }
 
